@@ -1,6 +1,7 @@
 package com.chatak.pg.util;
 
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.security.InvalidKeyException;
 import java.security.Key;
 import java.security.NoSuchAlgorithmException;
@@ -10,9 +11,6 @@ import javax.crypto.Cipher;
 import javax.crypto.IllegalBlockSizeException;
 import javax.crypto.NoSuchPaddingException;
 import javax.crypto.spec.SecretKeySpec;
-
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
 
 public class AESEncConfig {
   
@@ -36,7 +34,7 @@ public class AESEncConfig {
     Cipher c = Cipher.getInstance(ALGO);
     c.init(Cipher.ENCRYPT_MODE, key);
     byte[] encVal = c.doFinal(data.getBytes());
-    String encryptedValue = new BASE64Encoder().encode(encVal);
+    String encryptedValue = new String(java.util.Base64.getMimeEncoder().encode(encVal),StandardCharsets.UTF_8);
     return encryptedValue;
   }
 
@@ -49,7 +47,7 @@ public class AESEncConfig {
     Key key = generateKey();
     Cipher c = Cipher.getInstance(ALGO);
     c.init(Cipher.DECRYPT_MODE, key);
-    byte[] decordedValue = new BASE64Decoder().decodeBuffer(encryptedData);
+    byte[] decordedValue = java.util.Base64.getMimeDecoder().decode(encryptedData);
     byte[] decValue = c.doFinal(decordedValue);
     String decryptedValue = new String(decValue);
     return decryptedValue;
